--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Learn the best SEO tips for optimizing your website with HTML and CSS."
+    />
+    <meta name="keywords" content="SEO, HTML, CSS, Web Optimization" />
+    <meta name="author" content="John Doe" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SEO &amp; Flexbox Best Practices</title>
     <link rel="stylesheet" href="style.css" />
@@ -19,121 +25,123 @@
       </nav>
     </header>
 
-    <div id="section-home"></div>
-    <div id="section-gallery">
-      <h2>Gallery</h2>
-      <hr />
-      <div class="gallery-container">
-        <div class="gallery-item">
-          <img src="images/resource-tti-10.webp" alt="" />
-        </div>
-        <div class="gallery-item">
-          <img src="images/resource-tti-13.webp" alt="" />
-        </div>
-        <div class="gallery-item">
-          <img src="images/resource-tti-15.avif" alt="" />
-        </div>
-      </div>
-    </div>
-    <div id="section-products">
-      <h2>Products</h2>
-      <hr />
-      <div class="product-container">
-        <div class="product">
-          <img src="images/magnific-robot.webp" alt="" />
-          <div class="product-info">
-            <h1>Product 1</h1>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt
-              quis aspernatur ratione tempore quidem quas sed provident quos
-              quasi dicta assumenda, similique non reprehenderit a harum nobis,
-              placeat, impedit voluptatum.
-            </p>
-            <div class="button">
-              <a href="#" class="btn">Learn more</a>
-            </div>
-          </div>
-        </div>
-        <div class="product">
-          <img
-            src="images/voting-rights-american-election_23-2151841484.avif"
-            alt=""
-          />
-          <div class="product-info">
-            <h1>Product 2</h1>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt
-              quis aspernatur ratione tempore quidem quas sed provident quos
-              quasi dicta assumenda, similique non reprehenderit a harum nobis,
-              placeat, impedit voluptatum.
-            </p>
-            <div class="button">
-              <a href="#" class="btn">Learn more</a>
-            </div>
-          </div>
-        </div>
-        <div class="product">
-          <img src="images/resource-tti-17.avif" alt="" />
-          <div class="product-info">
-            <h1>Product 3</h1>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt
-              quis aspernatur ratione tempore quidem quas sed provident quos
-              quasi dicta assumenda, similique non reprehenderit a harum nobis,
-              placeat, impedit voluptatum.
-            </p>
-            <div class="button">
-              <a href="#" class="btn">Learn more</a>
-            </div>
-          </div>
-        </div>
-        <div class="product">
-          <img src="images/resource-tti-14.avif" alt="" />
-          <div class="product-info">
-            <h1>Product 4</h1>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt
-              quis aspernatur ratione tempore quidem quas sed provident quos
-              quasi dicta assumenda, similique non reprehenderit a harum nobis,
-              placeat, impedit voluptatum.
-            </p>
-            <div class="button">
-              <a href="#" class="btn">Learn more</a>
-            </div>
-          </div>
-        </div>
-        <div class="product">
-          <img src="images/resource-tti-13.webp" alt="" />
-          <div class="product-info">
-            <h1>Product 5</h1>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt
-              quis aspernatur ratione tempore quidem quas sed provident quos
-              quasi dicta assumenda, similique non reprehenderit a harum nobis,
-              placeat, impedit voluptatum.
-            </p>
-            <div class="button">
-              <a href="#" class="btn">Learn more</a>
-            </div>
-          </div>
-        </div>
-        <div class="product">
-          <img src="images/resource-tti-10.webp" alt="" />
-          <div class="product-info">
-            <h1>Product 6</h1>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt
-              quis aspernatur ratione tempore quidem quas sed provident quos
-              quasi dicta assumenda, similique non reprehenderit a harum nobis,
-              placeat, impedit voluptatum.
-            </p>
-            <div class="button">
-              <a href="#" class="btn">Learn more</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <main>
+      <article id="section-home"></article>
+      <article id="section-gallery">
+        <h2>Gallery</h2>
+        <hr />
+        <article class="gallery-container">
+          <article class="gallery-item">
+            <img src="images/resource-tti-10.webp" alt="" />
+          </article>
+          <article class="gallery-item">
+            <img src="images/resource-tti-13.webp" alt="" />
+          </article>
+          <article class="gallery-item">
+            <img src="images/resource-tti-15.avif" alt="" />
+          </article>
+        </article>
+      </article>
+      <article id="section-products">
+        <h2>Products</h2>
+        <hr />
+        <article class="product-container">
+          <article class="product">
+            <img src="images/magnific-robot.webp" alt="" />
+            <article class="product-info">
+              <h1>Product 1</h1>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Incidunt quis aspernatur ratione tempore quidem quas sed
+                provident quos quasi dicta assumenda, similique non
+                reprehenderit a harum nobis, placeat, impedit voluptatum.
+              </p>
+              <article class="button">
+                <a href="#" class="btn">Learn more</a>
+              </article>
+            </article>
+          </article>
+          <article class="product">
+            <img
+              src="images/voting-rights-american-election_23-2151841484.avif"
+              alt=""
+            />
+            <article class="product-info">
+              <h1>Product 2</h1>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Incidunt quis aspernatur ratione tempore quidem quas sed
+                provident quos quasi dicta assumenda, similique non
+                reprehenderit a harum nobis, placeat, impedit voluptatum.
+              </p>
+              <article class="button">
+                <a href="#" class="btn">Learn more</a>
+              </article>
+            </article>
+          </article>
+          <article class="product">
+            <img src="images/resource-tti-17.avif" alt="" />
+            <article class="product-info">
+              <h1>Product 3</h1>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Incidunt quis aspernatur ratione tempore quidem quas sed
+                provident quos quasi dicta assumenda, similique non
+                reprehenderit a harum nobis, placeat, impedit voluptatum.
+              </p>
+              <article class="button">
+                <a href="#" class="btn">Learn more</a>
+              </article>
+            </article>
+          </article>
+          <article class="product">
+            <img src="images/resource-tti-14.avif" alt="" />
+            <article class="product-info">
+              <h1>Product 4</h1>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Incidunt quis aspernatur ratione tempore quidem quas sed
+                provident quos quasi dicta assumenda, similique non
+                reprehenderit a harum nobis, placeat, impedit voluptatum.
+              </p>
+              <article class="button">
+                <a href="#" class="btn">Learn more</a>
+              </article>
+            </article>
+          </article>
+          <article class="product">
+            <img src="images/resource-tti-13.webp" alt="" />
+            <article class="product-info">
+              <h1>Product 5</h1>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Incidunt quis aspernatur ratione tempore quidem quas sed
+                provident quos quasi dicta assumenda, similique non
+                reprehenderit a harum nobis, placeat, impedit voluptatum.
+              </p>
+              <article class="button">
+                <a href="#" class="btn">Learn more</a>
+              </article>
+            </article>
+          </article>
+          <article class="product">
+            <img src="images/resource-tti-10.webp" alt="" />
+            <article class="product-info">
+              <h1>Product 6</h1>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Incidunt quis aspernatur ratione tempore quidem quas sed
+                provident quos quasi dicta assumenda, similique non
+                reprehenderit a harum nobis, placeat, impedit voluptatum.
+              </p>
+              <article class="button">
+                <a href="#" class="btn">Learn more</a>
+              </article>
+            </article>
+          </article>
+        </article>
+      </article>
+    </main>
 
     <div class="footer">
       <p>&copy; 2025 Flexbox, Accessibility &amp; SEO</p>
